--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </svg>
         <div class="mx-auto max-w-7xl px-6 pb-24 pt-10 sm:pb-32 lg:flex lg:px-8 lg:py-40">
           <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl lg:flex-shrink-0 lg:pt-8">
-            <img class="h-20" src="components/logo/merito.png" alt="Your Company">
+            <img class="h-20" src="{{url_for('static', filename='/logo/merito.png')}}" alt="Your Company">
             <div class="mt-24 sm:mt-32 lg:mt-16">
               <a href="https://github.com/termi95/BayesMaze" target="_blank" class="inline-flex space-x-6">
                 <span class="rounded-full bg-indigo-600/10 px-3 py-1 text-sm font-semibold leading-6 text-indigo-600 ring-1 ring-inset ring-indigo-600/10">Kod źródłowy</span>
@@ -45,7 +45,7 @@
           <div class="mx-auto mt-16 flex max-w-2xl sm:mt-24 lg:ml-10 lg:mr-0 lg:mt-0 lg:max-w-none lg:flex-none xl:ml-32">
             <div class="max-w-3xl flex-none sm:max-w-5xl lg:max-w-none">
               <div class="-m-2 rounded-xl bg-gray-900/5 p-2 ring-1 ring-inset ring-gray-900/10 lg:-m-4 lg:rounded-2xl lg:p-4">
-                <img src="components/images/background.jpg" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10 max-w-3xl">
+                <img src="{{url_for('static', filename='/images/background.jpg')}}" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10 max-w-3xl">
               </div>
             </div>
           </div>
@@ -54,67 +54,11 @@
     </div>
     
     <!-- GAME -->
-    <div class="w-screen h-screen snap-center relative" id="game">
-      <div class="flex h-3/4 flex-col">
-        <div class="shadow ring-1 ring-black ring-opacity-5 lg:flex lg:flex-auto lg:flex-col">
-          <div class="flex bg-gray-200 text-xs leading-6 text-gray-700 lg:flex-auto">
-            <div class="w-full grid grid-cols-4 grid-rows-4 gap-px">
-              <div class="bg-white px-3 py-2">
-                <span>1</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>2</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>3</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>4</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>5</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>6</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>7</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>8</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>9</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>10</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>11</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>12</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>13</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>14</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>15</span>
-              </div>
-              <div class="bg-white px-3 py-2">
-                <span>16</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="w-screen h-screen snap-center relative" id="game">     
     </div>
   </div>
 
   <!-- SCRIPT  -->
-  <script src="script.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='/scripts/index.js')}}"></script>
 </body>
 </html>
