--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body class="p-0 m-0 box-border scroll-smooth">
   <!-- DASHBOARD -->
   <div class="w-screen h-screen snap-mandatory snap-y overflow-scroll">
-    <div class="w-screen h-screen snap-center">
+    <div class="w-screen h-screen snap-center overflow-hidden">
       <div class="relative isolate overflow-hidden bg-white">
         <svg class="absolute inset-0 -z-10 h-full w-full stroke-gray-200 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]" aria-hidden="true">
           <defs>
@@ -21,10 +21,10 @@
         </svg>
         <div class="mx-auto max-w-7xl px-6 pb-24 pt-10 sm:pb-32 lg:flex lg:px-8 lg:py-40">
           <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl lg:flex-shrink-0 lg:pt-8">
-            <img class="h-20" src="{{url_for('static', filename='/logo/merito.png')}}" alt="Your Company">
-            <div class="mt-24 sm:mt-32 lg:mt-16">
+            <img class="h-20" src="{{url_for('static', filename='/logo/merito.png')}}" alt="Merito">
+            <div class="mt-5 lg:mt-16">
               <a href="https://github.com/termi95/BayesMaze" target="_blank" class="inline-flex space-x-6">
-                <span class="rounded-full bg-indigo-600/10 px-3 py-1 text-sm font-semibold leading-6 text-indigo-600 ring-1 ring-inset ring-indigo-600/10">Kod źródłowy</span>
+                <span class="rounded-full bg-blue-600/10 px-3 py-1 text-sm font-semibold leading-6 text-blue-600 ring-1 ring-inset ring-blue-600/10">Kod źródłowy</span>
                 <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-gray-600">
                   <span>Zobacz na githubie!</span>
                   <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -36,17 +36,15 @@
             <h1 class="mt-10 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Symulator poszukiwań rozbitków</h1>
             <p class="mt-6 text-lg leading-8 text-gray-600">Skorzystaj z twierdzenia Bayesa, aby w sposób matematyczny ponownie oszacować prawdopodobieństwo i podejmować decyzje, mając na celu możliwie najszybsze zlokalizowanie rozbitka.</p>
             <div class="mt-10 flex items-center gap-x-6">
-              <button onClick="scrollToGame()" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Rozpocznij</button>
+              <button onClick="scrollToGame()" class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Rozpocznij</button>
 
               <p class="text-sm font-semibold leading-6 text-gray-900">Lub scrolluj w dół</p>
               <span class="animate-bounce -ml-3 -mb-1">↓</span>
             </div>
           </div>
-          <div class="mx-auto mt-16 flex max-w-2xl sm:mt-24 lg:ml-10 lg:mr-0 lg:mt-0 lg:max-w-none lg:flex-none xl:ml-32">
-            <div class="max-w-3xl flex-none sm:max-w-5xl lg:max-w-none">
-              <div class="-m-2 rounded-xl bg-gray-900/5 p-2 ring-1 ring-inset ring-gray-900/10 lg:-m-4 lg:rounded-2xl lg:p-4">
-                <img src="{{url_for('static', filename='/images/background.jpg')}}" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10 max-w-3xl">
-              </div>
+          <div class="mx-auto lg:flex max-w-2xl mt-6 lg:ml-10 lg:mr-0 lg:mt-0 lg:flex-none xl:ml-32 mb-10">
+            <div class="-m-2 rounded-xl bg-gray-900/5 p-2 ring-1 ring-inset ring-gray-900/10 lg:-m-4 lg:rounded-2xl lg:p-4">
+              <img src="{{url_for('static', filename='/images/background.jpg')}}" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10 w-full max-w-2xl">
             </div>
           </div>
         </div>
@@ -54,7 +52,18 @@
     </div>
     
     <!-- GAME -->
-    <div class="w-screen h-screen snap-center relative" id="game">     
+    <div class="w-screen h-screen snap-center relative" id="game">
+      <div class="md:flex md:items-center md:justify-between container mx-auto p-20">
+        <div class="min-w-0 flex-1">
+          <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Symulator poszukiwań rozbitków</h2>
+        </div>
+        <div class="mt-4 flex md:ml-4 md:mt-0">
+          <button type="button" onClick="scrollToGame()"
+            class="ml-3 inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-700
+            focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Rozpocznij grę
+          </button>
+        </div>
+      </div>      
     </div>
   </div>
 
