--- a/templates/game_board.html
+++ b/templates/game_board.html
@@ -2,23 +2,22 @@
   <div class="shadow ring-1 ring-black ring-opacity-5 lg:flex lg:flex-auto lg:flex-col">
     <div class="flex bg-gray-200 text-xs leading-6 text-gray-700 lg:flex-auto">
       <div class="w-full grid grid-cols-8 grid-rows-8 gap-px">
-        {% for i in range(rows) %}
-          {% for j in range(cols) %}
-            <div class="bg-white px-3 py-2 bg-cover bg-center flex items-center justify-center overflow-hidden" style="background-image: url({{url_for('static', filename=images[game_map[i][j]])}});">
-              {% if game_map[i][j] == 1 %}
-                <!-- <span class="text-md text-white bg-red-500 rounded-full p-1">ratownik</span> -->
-                <img src="{{url_for('static', filename='/images/boat.png')}}" class="w-20"/>
-              {% endif %}
+        {% for i in range(rows) -%}
+          {% for j in range(cols) -%}
+            <div row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" class="bg-white px-3 py-2 bg-cover bg-center flex items-center justify-center overflow-hidden board-tile" style="background-image: url({{url_for('static', filename=images[game_map[i][j]])}});">
+              {% if game_map[i][j] == 1 -%}
+                <img row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" src="{{url_for('static', filename='/images/boat.png')}}" class="w-20"/>
+              {% endif -%}
 
-              {% if game_map[i][j] == 2 %}
-              <img src="{{url_for('static', filename='/images/human.png')}}" class="w-20"/>
-              {% endif %}
+              {% if game_map[i][j] == 2 -%}
+              <img row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" src="{{url_for('static', filename='/images/human.png')}}" class="w-20"/>
+              {% endif -%}
 
               <!-- debugger jest tutaj :D  -->
               <!-- <span class="text-md text-white bg-gray-800/50 rounded-full p-1 relative top-0 left-0" >({{i}}:{{j}}) dataType:({{game_map[i][j]}})</span> -->
             </div>
-          {% endfor %}
-        {% endfor %}
+          {% endfor -%}
+        {% endfor -%}
       </div>
     </div>
   </div>
