--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Python Projekt</title>
+  <style>
+    .picked {border: 2px solid red;}
+  </style>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="p-0 m-0 box-border scroll-smooth">
