add small improvements

--- a/templates/game_board.html
+++ b/templates/game_board.html
@@ -4,7 +4,7 @@
       <div class="w-full grid grid-cols-8 grid-rows-8 gap-px">
         {% for i in range(rows) -%}
           {% for j in range(cols) -%}
-            <div row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" class="bg-white px-3 py-2 bg-cover bg-center flex items-center justify-center overflow-hidden board-tile" style="background-image: url({{url_for('static', filename=images[game_map[i][j]])}});">
+            <div row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" class="bg-white px-3 py-2 bg-cover bg-center flex items-center justify-center overflow-hidden board-tile tooltip" style="background-image: url({{url_for('static', filename=images[game_map[i][j]])}});">
               {% if game_map[i][j] == 1 -%}
                 <img row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" src="{{url_for('static', filename='/images/boat.png')}}" class="w-20"/>
               {% endif -%}
@@ -12,7 +12,7 @@
               {% if game_map[i][j] == 2 -%}
               <img row="{{i}}" col="{{j}}" type="{{game_map[i][j]}}" src="{{url_for('static', filename='/images/human.png')}}" class="w-20"/>
               {% endif -%}
-
+              <span class="tooltiptext">{{probabilities[i][j]}}</span>
               <!-- debugger jest tutaj :D  -->
               <!-- <span class="text-md text-white bg-gray-800/50 rounded-full p-1 relative top-0 left-0" >({{i}}:{{j}}) dataType:({{game_map[i][j]}})</span> -->
             </div>
