--- a/templates/index.html
+++ b/templates/index.html
@@ -5,35 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Python Projekt</title>
   <style>
-    .picked {border: 2px solid red;}
-    /* Tooltip container */
-    .tooltip {
-      position: relative;
-      display: inline-block;
-      border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    .animate-boat {
+      animation: float 14s ease-in-out infinite;
     }
-
-    /* Tooltip text */
-    .tooltip .tooltiptext {
-      visibility: hidden;
-      width: 120px;
-      background-color: black;
-      color: #fff;
-      text-align: center;
-      padding: 5px 0;
-      border-radius: 6px;
     
-      /* Position the tooltip text - see examples below! */
-      position: absolute;
-      z-index: 1;
-      top: 75%;
-      left: 50%;
-      margin-left: -60px;
-    }
-
-    /* Show the tooltip text when you mouse over the tooltip container */
-    .tooltip:hover .tooltiptext {
-      visibility: visible;
+    @keyframes float {
+      0% {
+        transform: translate(0, 0) rotate(0deg);
+      }
+      10% {
+        transform: translate(5px, -5px) rotate(-2deg);
+      }
+      20% {
+        transform: translate(-3px, -7px) rotate(1deg);
+      }
+      30% {
+        transform: translate(4px, -3px) rotate(-1.5deg);
+      }
+      40% {
+        transform: translate(-4px, -6px) rotate(2deg);
+      }
+      50% {
+        transform: translate(2px, -8px) rotate(-1deg);
+      }
+      60% {
+        transform: translate(-5px, -5px) rotate(1.5deg);
+      }
+      70% {
+        transform: translate(3px, -4px) rotate(-2deg);
+      }
+      80% {
+        transform: translate(-3px, -6px) rotate(1deg);
+      }
+      90% {
+        transform: translate(4px, -7px) rotate(-1.5deg);
+      }
+      100% {
+        transform: translate(0, 0) rotate(0deg);
+      }
     }
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -43,7 +52,8 @@
   <div class="w-screen h-screen snap-mandatory snap-y overflow-scroll">
     <div class="w-screen h-screen snap-center overflow-hidden">
       <div class="relative isolate overflow-hidden bg-white">
-        <svg class="absolute inset-0 -z-10 h-full w-full stroke-gray-200 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]" aria-hidden="true">
+        <svg class="absolute inset-0 -z-10 h-full w-full stroke-gray-200 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]"
+          aria-hidden="true">
           <defs>
             <pattern id="0787a7c5-978c-4f66-83c7-11c213f99cb7" width="200" height="200" x="50%" y="-1" patternUnits="userSpaceOnUse">
               <path d="M.5 200V.5H200" fill="none" />
@@ -56,7 +66,9 @@
             <img class="h-20" src="{{url_for('static', filename='/logo/merito.png')}}" alt="Merito">
             <div class="mt-5 lg:mt-16">
               <a href="https://github.com/termi95/BayesMaze" target="_blank" class="inline-flex space-x-6">
-                <span class="rounded-full bg-blue-600/10 px-3 py-1 text-sm font-semibold leading-6 text-blue-600 ring-1 ring-inset ring-blue-600/10">Kod źródłowy</span>
+                <span class="rounded-full bg-blue-600/10 px-3 py-1 text-sm font-semibold leading-6 text-blue-600 ring-1 ring-inset ring-blue-600/10">
+                  Kod źródłowy
+                </span>
                 <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-gray-600">
                   <span>Zobacz na githubie!</span>
                   <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -66,9 +78,16 @@
               </a>
             </div>
             <h1 class="mt-10 text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Symulator poszukiwań rozbitków</h1>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Skorzystaj z twierdzenia Bayesa, aby w sposób matematyczny ponownie oszacować prawdopodobieństwo i podejmować decyzje, mając na celu możliwie najszybsze zlokalizowanie rozbitka.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">
+              Skorzystaj z twierdzenia Bayesa, aby w sposób matematyczny ponownie oszacować prawdopodobieństwo i podejmować decyzje, mając na
+              celu możliwie najszybsze zlokalizowanie rozbitka.
+            </p>
             <div class="mt-10 flex items-center gap-x-6">
-              <button onClick="scrollToGame()" class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600" id="game-starter">Rozpocznij</button>
+              <button onClick="scrollToGame()"
+                class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-500
+                  focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+                id="game-starter">Rozpocznij
+              </button>
 
               <p class="text-sm font-semibold leading-6 text-gray-900">Lub scrolluj w dół</p>
               <span class="animate-bounce -ml-3 -mb-1">↓</span>
@@ -98,12 +117,38 @@
       </div>      
     </div>
   </div>
-  <dialog close id="winer-dialog">
-    <p id="winer-dialog-text">Greetings, one and all!</p>
-    <form method="dialog">
-      <button onClick="backToGameStarter()">OK</button>
-    </form>
-  </dialog>
+  
+  <!-- MODAL -->
+  <div class=" hidden relative z-10" aria-labelledby="modal-title" role="dialog" aria-modal="true" id="winer-dialog">
+    <div class="fixed inset-0 bg-gray-700 bg-opacity-75 transition-opacity backdrop-blur-sm"></div>
+  
+    <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+      <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+        <div class="relative transform overflow-hidden rounded-lg bg-white px-4 pb-4 pt-5 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-sm sm:p-6">
+          <div>
+            <div class="mx-auto flex h-12 w-12 items-center justify-center rounded-full bg-green-100">
+              <svg class="h-6 w-6 text-green-600" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
+              </svg>
+            </div>
+            <div class="mt-3 text-center sm:mt-5">
+              <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Gra ukończona!</h3>
+              <div class="mt-2">
+                <p id="winer-dialog-text" class="text-sm text-gray-500"></p>
+              </div>
+            </div>
+          </div>
+          <div class="mt-5 sm:mt-6">
+            <button type="button" onClick="window.location.reload();"
+              class="inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white
+                shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2
+                focus-visible:outline-blue-600">Powrót do menu
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- SCRIPT  -->
   <script type="text/javascript" src="{{url_for('static', filename='/scripts/index.js')}}"></script>
